force-app/main/default/objects/Contract_ARR_Report__c/Contract_ARR_Report__c.object-meta.xml
<CustomObject>
    <description>Created for Reporting Snaphot to allow Executive Reporting on Active Contracts in this Quarter vs. Previous Quarters (trend analysis) - Contract ARR from Contracted Assets. Populated from Informatica Cloud monthly.</description>
    <label>Contract ARR Report</label>
    <nameField>
        <displayFormat>CAR-{0000000}</displayFormat>
        <label>Record No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract ARR Report</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>