force-app/main/default/objects/Contract_ARR_Report__c/fields/Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Type__c</fullName>
    <formula>TEXT( Contract__r.Agreement_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement Type</label>
    <type>Text</type>
</CustomField>