force-app/main/default/objects/Contract_ARR_Report__c/fields/Contract_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Contract_Purpose__c</fullName>
    <formula>Contract__r.Internal_Notes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Purpose</label>
    <type>Text</type>
</CustomField>