force-app/main/default/objects/Contract_ARR_Report__c/fields/Contract_Title__c.field-meta.xml
<CustomField>
    <fullName>Contract_Title__c</fullName>
    <formula>Contract__r.Contract_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Title</label>
    <type>Text</type>
</CustomField>