force-app/main/default/objects/Contract_ARR_Report__c/fields/Contracted_Asset__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contracted Asset</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Contract ARR Report</relationshipLabel>
    <relationshipName>Contract_ARR_Report</relationshipName>
    <type>Lookup</type>
</CustomField>