force-app/main/default/objects/Contract_ARR_Report__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <formula>Contract__r.EndDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date</label>
    <type>Date</type>
</CustomField>