force-app/main/default/objects/Contract_ARR_Report__c/fields/LTC_ARR__c.field-meta.xml
<CustomField>
    <fullName>LTC_ARR__c</fullName>
    <label>LTC ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>