force-app/main/default/objects/Contract_ARR_Report__c/fields/Term_in_Years__c.field-meta.xml
<CustomField>
    <fullName>Term_in_Years__c</fullName>
    <label>Term in Years</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>