force-app/main/default/objects/Contract_ARR_Report__c/fields/Term_Type__c.field-meta.xml
<CustomField>
    <fullName>Term_Type__c</fullName>
    <formula>TEXT(Contract__r.Term_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Term Type</label>
    <type>Text</type>
</CustomField>